buildscript {
    repositories {
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
}


plugins {
    id 'java'
    id 'jacoco'

    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'com.freenote'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}

test {
    finalizedBy jacocoTestReport // report is always generated after tests run
}
jacocoTestReport {
    dependsOn test // tests are required to run before generating the report
    afterEvaluate {
        classDirectories.setFrom(
                files(classDirectories.files.collect {
                    fileTree(dir: it, exclude: [
                            '**/generated/**',
                            '**/build/generated/**',
                            '**/*Generated*.*',
                            '**/META-INF/**'
                    ])
                })
        )
    }
}

jar {
    manifest {
        attributes(
                'Main-Class': 'com.freenote.app.server.example.SimpleServer'
        )
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.20 // 80% line coverage
            }
            excludes = ['**/SimpleServer.main*']
        }
    }
}

check.dependsOn jacocoTestCoverageVerification

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation("commons-codec:commons-codec:1.18.0")
    implementation("org.apache.logging.log4j:log4j-core:2.25.1")
    implementation("org.apache.logging.log4j:log4j-api:2.25.1")
    testImplementation("org.mockito:mockito-core:5.17.0")
    implementation project(':UtilityProcessor')
    annotationProcessor project(":UtilityProcessor")

    // For tests
    testAnnotationProcessor "com.google.auto.service:auto-service:1.1.1"
    testCompileOnly "com.google.auto.service:auto-service-annotations:1.1.1"

    // WebSocket Client Implementation (Tyrus)
    implementation 'org.glassfish.tyrus:tyrus-client:1.20'
    implementation 'org.glassfish.tyrus:tyrus-container-grizzly-client:1.20'

    // SSL/TLS support
    implementation 'org.glassfish.tyrus:tyrus-container-grizzly-client:1.20'

    // JSON Processing
    implementation("com.fasterxml.jackson.core:jackson-databind:2.20.0")
    implementation("com.fasterxml.jackson.core:jackson-core:2.20.0")
    implementation("com.fasterxml.jackson.core:jackson-annotations:2.20")
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17) // or 21, etc.
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

//tasks.withType(JavaCompile).configureEach {
//    options.compilerArgs << "-XprintProcessorInfo"
//}

tasks.register('bootRun', JavaExec) {
    group = 'application'
    description = 'Run main class'
    classpath = sourceSets.main.runtimeClasspath
    mainClass.set('com.freenote.app.server.example.SimpleServer')
}